@@ -1,3 +1,6 @@
+2012-11-09
+ * support for HISTORY and COMMENTS fields
+
 2012-10-26
  * bb server with mapping and observations calls
 
